syntax = "proto3";

package voiceassistant;

service VoiceAssistantService {
  rpc ProcessCommand(ProcessCommandRequest) returns (ProcessCommandResponse);
  rpc GetUserVoiceSettings(GetUserVoiceSettingsRequest) returns (GetUserVoiceSettingsResponse);
}

message ProcessCommandRequest {
  int32 user_id = 1;
  string audio_base64 = 2;
}

message ProcessCommandResponse {
  string transcript = 1;
  string response = 2;
  string audio_base64 = 3;
  bool needs_confirmation = 4;
}

message GetUserVoiceSettingsRequest {
  int32 user_id = 1;
}

message GetUserVoiceSettingsResponse {
  string settings_json = 1;
}
